@@ -157,6 +157,39 @@
             <artifactId>serializer</artifactId>
             <version>2.7.3</version>
         </dependency>
+        <!-- Dependencias para EnvioApi-->
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>1.4</version>
+        </dependency>
+        <!-- XML Beans por sus Excepciones -->
+        <dependency>
+            <groupId>org.apache.xmlbeans</groupId>
+            <artifactId>xmlbeans</artifactId>
+            <version>5.3.0</version>
+        </dependency>
+        <!-- Jakarta SOAP API -->
+        <dependency>
+            <groupId>jakarta.xml.soap</groupId>
+            <artifactId>jakarta.xml.soap-api</artifactId>
+            <version>3.0.2</version>
+        </dependency>
+
+        <!-- SAAJ implementation (runtime) -->
+        <dependency>
+            <groupId>com.sun.xml.messaging.saaj</groupId>
+            <artifactId>saaj-impl</artifactId>
+            <version>3.0.4</version>
+            <scope>runtime</scope>
+        </dependency>
+
+        <!-- Apache HttpClient -->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.14</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -170,11 +203,78 @@
                     <target>25</target>
                 </configuration>
             </plugin>
-            <plugin>
+            <!-- <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>3.1.0</version>
-            </plugin>
+            </plugin> -->
+            <plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>3.4.1</version>
+				<executions>
+					<execution>
+						<id>run-envio</id>
+						<goals>
+							<goal>exec</goal>
+						</goals>
+						<configuration>
+							<executable>java</executable>
+							<arguments>
+								<argument>--add-opens=java.xml/com.sun.org.apache.xerces.internal.jaxp=ALL-UNNAMED</argument>
+								<argument>--add-opens=java.xml/com.sun.org.apache.xerces.internal.parsers=ALL-UNNAMED</argument>
+								<argument>--add-opens=java.xml/com.sun.org.apache.xerces.internal.dom=ALL-UNNAMED</argument>
+								<argument>--add-exports=java.xml/com.sun.org.apache.xerces.internal.jaxp=ALL-UNNAMED</argument>
+								<argument>--add-exports=java.xml/com.sun.org.apache.xerces.internal.dom=ALL-UNNAMED</argument>
+								<argument>-classpath</argument>
+								<classpath/>
+								<argument>src/main/java/SiiEnvioApi.EnviaDocumento</argument>
+								<argument>-c</argument>
+								<argument>certABC.pfx</argument>
+								<argument>-s</argument>
+								<argument>contraseña</argument>
+								<argument>-f</argument>
+								<argument>60910000-1</argument>
+								<argument>envioprueba2.xml</argument>
+							</arguments>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+            <plugin>
+				<groupId>org.jvnet.jaxb</groupId>
+				<artifactId>jaxb-maven-plugin</artifactId>
+				<version>4.0.8</version>
+				<executions>
+					<execution>
+						<id>generate-sii-schemas</id>
+						<goals>
+							<goal>generate</goal>
+						</goals>
+						<configuration>
+							<schemaDirectory>${project.basedir}/src/main/java/SiiEnvio/schemas</schemaDirectory>
+							<schemaIncludes>
+								<include>*.xsd</include>
+							</schemaIncludes>
+							<schemaExcludes>
+								<exclude>**/*.xsdconfig</exclude>
+							</schemaExcludes>
+							<generatePackage>SiiEnvio.generatedClasses.cl.sii.siiDte</generatePackage>
+							<generateDirectory>${project.basedir}/src/main/java/</generateDirectory>
+							<extension>true</extension>
+							<strict>false</strict>
+							<verbose>true</verbose>
+						</configuration>
+					</execution>
+				</executions>
+				<dependencies>
+					<dependency>
+						<groupId>jakarta.xml.bind</groupId>
+						<artifactId>jakarta.xml.bind-api</artifactId>
+						<version>4.0.2</version>
+					</dependency>
+				</dependencies>
+			</plugin>
         </plugins>
     </build>
 </project>
